fix: alignment of action buttons in search grid view

--- a/static/css/legacy.css
+++ b/static/css/legacy.css
@@ -1436,6 +1436,7 @@ ul.list-books span.resultType {
 .list-books--grid .searchResultItem .sri__main {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .list-books--grid .searchResultItem .bookcover {
@@ -1445,6 +1446,14 @@ ul.list-books span.resultType {
   flex-direction: column;
   justify-content: flex-end;
   margin: 0;
+}
+
+.list-books--grid .searchResultItem .bookcover img {
+  width: 100%;
+  height: 180px;
+  object-fit: contain;
+  object-position: bottom;
+  display: block;
 }
 
 .list-books--grid .searchResultItem > .details,
